gcc/testsuite/g++.dg/init/static1.C
struct A {
  static const int size = BOGUS; // { dg-error "" }
};
const int A::size;
